Image uploaded on cloudinary plateforme

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 7000
 CLOUD_NAME = duetomqjz
 CLOUD_API_KEY = 678377753892168
 CLOUD_API_SECRET = 9YOIvJmJPV23Ji17dCM3on1-RUI
+
+MONGODB_URI = mongodb+srv://bisimwadevcode:bisimwa%4014@mymongodbdatabase.0ojcbyt.mongodb.net/?retryWrites=true&w=majority
